# nma-motor-rnn-connectivity

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: analysis-task.md  config.yml
.github/workflows/: tests.yml
docs/: COLLABORATION_GUIDE.md  CONTROL_PROTOCOL.md  DOCUMENTATION_CHECKLIST.md  LITERATURE_REVIEW.md  NOTEBOOK_MAP.md  PROJECT_STATUS.md  PROVENANCE.md  RESEARCH_OVERVIEW.md  TEAM_WORKFLOW.md
docs/reference/: NMA_PROJECT_GUIDE.md
literature/: PDF_MANIFEST.md  README.md  references.bib
notebooks/: 00_nma_original_motor_rnns.ipynb  01_q1_q2_exploration.ipynb  Motor_RNN_Project.ipynb
notebooks/archive/: 2026-07-13_q1_q2_exploration_earlier.ipynb  README.md  w2d2_connectivity_experiment.ipynb
results/pilot/: PILOT_STATUS.md  checkpoints.csv  conditions.csv  config.json  hypothesis_contrasts.csv
results/primary/: PRIMARY_STATUS.md  checkpoints.csv  conditions.csv  config.json  hypothesis_contrasts.csv
results/q1/: checkpoints.csv  condition.csv  config.json  trial_history.csv
scripts/: build_notebook.py  generate_q1.py
src/nma_motor_rnn/: __init__.py  connectivity.py
tests/: test_connectivity.py  test_result_integrity.py
